--- a/aoc2021.ipynb
+++ b/aoc2021.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyNbCdl5veyZtZfbD68bpIaI",
+      "authorship_tag": "ABX9TyO0uyl9y5UQ1lmiooe7AKQz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -224,7 +224,7 @@
         "# repeat with next bit on filtered list, repeat until only one list entry is left\n",
         "from functools import reduce\n",
         "\n",
-        "measurements = [line.strip() for line in open('drive/MyDrive/AoC/2021/input3.txt')]  # ms = measurements, binary 12 char strings\n",
+        "measurements = [line.strip() for line in open('drive/MyDrive/AoC/2021/input3.txt')]  # binary 12 char strings\n",
         "bits = len(measurements[0])\n",
         "\n",
         "# filtermode 1 - keep numbers with bit value = most common value of the bit (equally common - keep those with 1)\n",
@@ -243,7 +243,7 @@
         "\n",
         "int(iter(measurements, 0, 1)[0], 2) * int(iter(measurements, 0, 0)[0], 2)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -482,7 +482,7 @@
         "\n",
         "print(f\"{iterations}: {len(population)}\")\n"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -517,7 +517,7 @@
         "\n",
         "print(f\"{iterations}: {pop_counts} ({sum(pop_counts)})\")\n"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -561,7 +561,7 @@
         "print(min([(i, consumption2(i, positions)) for i in range(0, len(positions))], key=lambda t: t[1]))\n",
         "  "
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
