--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyO0uyl9y5UQ1lmiooe7AKQz",
+      "authorship_tag": "ABX9TyN2pSdhdAocLvDvMcTxoONl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,7 +26,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mgerlach/advent_of_code/blob/main/aoc2021.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mgerlach/advent_of_code/blob/main/2021/aoc2021.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -217,33 +217,37 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KUTwafbeVsCC",
-        "outputId": "ea371974-0172-473c-9e34-288e5749353e"
+        "outputId": "e66aeeb6-65a6-4121-912b-7e9aae9298e7"
       },
       "source": [
         "# count values for first bit, keep lines with first bit either most or least common value,\n",
         "# repeat with next bit on filtered list, repeat until only one list entry is left\n",
-        "from functools import reduce\n",
-        "\n",
         "measurements = [line.strip() for line in open('drive/MyDrive/AoC/2021/input3.txt')]  # binary 12 char strings\n",
         "bits = len(measurements[0])\n",
         "\n",
+        "# find the measurement according to filtermode\n",
+        "# ms - measurements\n",
         "# filtermode 1 - keep numbers with bit value = most common value of the bit (equally common - keep those with 1)\n",
         "# filtermode 0 - keep numbers with bit value = least common value of the bit (equally common - keep those with 0)\n",
-        "def f(ms, bit, filtermode):\n",
-        "  half = len(ms)/2\n",
-        "  # count 1s in bit position\n",
-        "  count1s = reduce(lambda count, m: count + int(m[bit]), ms, 0)\n",
-        "  # filter according to count1s and filtermode\n",
-        "  filterval = filtermode if count1s > half else (1-filtermode if count1s < half else filtermode)\n",
-        "  return [m for m in ms if int(m[bit]) == filterval]\n",
+        "def find(ms, filtermode):\n",
         "\n",
-        "def iter(ms, bit, filtermode):\n",
-        "  filtered = f(ms, bit, filtermode)\n",
-        "  return filtered if len(filtered) == 1 else iter(filtered, bit+1, filtermode)\n",
+        "  def filter(ms, bit):\n",
+        "    half = len(ms)/2\n",
+        "    # count 1s in bit position\n",
+        "    count1s = sum([int(m[bit]) for m in ms])\n",
+        "    # filter according to count1s and filtermode\n",
+        "    filterval = filtermode if count1s > half else (1-filtermode if count1s < half else filtermode)\n",
+        "    return [m for m in ms if int(m[bit]) == filterval]\n",
         "\n",
-        "int(iter(measurements, 0, 1)[0], 2) * int(iter(measurements, 0, 0)[0], 2)"
+        "  def iter(ms, bit):\n",
+        "    filtered = filter(ms, bit)\n",
+        "    return filtered[0] if len(filtered) == 1 else iter(filtered, bit+1)\n",
+        "\n",
+        "  return iter(ms, 0)\n",
+        "\n",
+        "int(find(measurements, 1), 2) * int(find(measurements, 0), 2)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -253,7 +257,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 4
         }
       ]
     },
