--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyN9o5uin+IpmrtZ161YNcn4",
+      "authorship_tag": "ABX9TyPFecgBG2f34GVpmZCBF8Id",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -574,6 +574,133 @@
             "estimation(part 1): 243.2525\n",
             "(347, 347449)\n",
             "(486, 98039527)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "8) 4-Digit display wiring"
+      ],
+      "metadata": {
+        "id": "j0HGeXKy8VLf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "patterns_and_output = [{'patterns': l[0].split(), 'output': l[1].split()} for l in [line.split('|') for line in open('drive/MyDrive/AoC/2021/input08.txt')]]\n",
+        "\n",
+        "sc = {0: 6, 1: 2, 2: 5, 3: 5, 4: 4, 5: 5, 6: 6, 7: 3, 8: 7, 9: 6}  # segment counts\n",
+        "\n",
+        "# 1 unique digits in output\n",
+        "\n",
+        "print(f\"part 1: {sum([1 if len(o) in [sc[1], sc[4], sc[7], sc[8]] else 0 for po in patterns_and_output for o in po['output']])}\")\n",
+        "\n",
+        "# 2 find wiring\n",
+        "\n",
+        "# output: map letter in input pattern -> segments (a-g)\n",
+        "\n",
+        "# 1:     c     f\n",
+        "# 7: a   c     f    \n",
+        "# 4:   b c d   f     \n",
+        "# 5: a b   d   f g\n",
+        "# 2: a   c d e   g\n",
+        "# 3: a   c d   f g\n",
+        "# 9: a b c d   f g\n",
+        "# 0: a b c   e f g \n",
+        "# 6: a b   d e f g\n",
+        "# 8: a b c d e f g \n",
+        "\n",
+        "from functools import reduce\n",
+        "\n",
+        "def decode(patterns) -> dict:\n",
+        "  sp = sorted(patterns, key=lambda s: len(s))\n",
+        "  len2_1_cf = sp[0]\n",
+        "  len3_7_acf = sp[1]\n",
+        "  len4_4_bcdf = sp[2]\n",
+        "  len5_235 = sp[3:6]\n",
+        "  len6_069 = sp[6:9]\n",
+        "  len7_8_abcdefg = sp[9]\n",
+        "\n",
+        "  def s_diff(s1:str, s2:str) -> str:\n",
+        "    return \"\".join([c for c in s1 if c not in s2])  \n",
+        "\n",
+        "  def s_inter(s1:str, s2:str) -> str:\n",
+        "    return \"\".join([c for c in s1 if c in s2])\n",
+        "\n",
+        "  def s_union(s1:str, s2:str) -> str:\n",
+        "    return \"\".join(set(s1+s2))\n",
+        "\n",
+        "  def chars_in(s1:str, s2:str) -> bool:\n",
+        "    return sum([1 if c in s2 else 0 for c in s1]) == len(s1)\n",
+        "\n",
+        "\n",
+        "  segments_by_wire = {}\n",
+        "  # 1\n",
+        "  seg_a = s_diff(len3_7_acf, len2_1_cf)\n",
+        "  segments_by_wire[seg_a] = 'a'\n",
+        "  # 2 dg = \"3\" / len5 which includes (\"1\") - \"7\"\n",
+        "  seg_dg = s_diff([p for p in len5_235 if chars_in(len2_1_cf, p)][0], len3_7_acf)\n",
+        "  # 3 \n",
+        "  seg_bd = s_diff(len4_4_bcdf, len2_1_cf)\n",
+        "  # 4\n",
+        "  seg_d = s_inter(seg_dg, seg_bd)\n",
+        "  segments_by_wire[seg_d] = 'd'\n",
+        "  # 5\n",
+        "  seg_g = s_diff(seg_dg, seg_d)\n",
+        "  segments_by_wire[seg_g] = 'g'\n",
+        "  # 6\n",
+        "  seg_b = s_diff(seg_bd, seg_d)\n",
+        "  segments_by_wire[seg_b] = 'b'\n",
+        "  # 7\n",
+        "  seg_eg = s_diff(len7_8_abcdefg, s_union(len3_7_acf, len4_4_bcdf))\n",
+        "  # 8\n",
+        "  seg_e = s_diff(seg_eg, seg_g)\n",
+        "  segments_by_wire[seg_e] = 'e'\n",
+        "  # 9 f = \"6\" / len 6 which has only one of the segments of \"1\" (cf) - segments a,b,d,e,g\n",
+        "  seg_f = reduce(lambda p, seg: sdiff(p, seg), [seg_a, seg_b, seg_d, seg_e, seg_g], [p for p in len6_069 if len(s_inter(p, len2_1_cf)) == 1][0])\n",
+        "  segments_by_wire[seg_f] = 'f'\n",
+        "  # 10 \n",
+        "  seg_c = s_diff(len2_1_cf, seg_f)\n",
+        "  segments_by_wire[seg_c] = 'c'\n",
+        "  return segments_by_wire\n",
+        "\n",
+        "def translate(output, mapping):\n",
+        "  return \"\".join([mapping[o] for o in output])\n",
+        "\n",
+        "def s_sort(s:str) -> str:\n",
+        "  return \"\".join(sorted(s))\n",
+        "\n",
+        "# segments for digits 0-9\n",
+        "segments = [ 'abcefg', 'cf', 'acdeg', 'acdfg', 'bcdf', 'abdfg', 'abdefg', 'acf', 'abcdefg', 'abcdfg' ]\n",
+        "digits = dict((s, d) for d, s in enumerate(segments))\n",
+        "\n",
+        "res = 0\n",
+        "for po in patterns_and_output:\n",
+        "  mapping = decode(po['patterns'])\n",
+        "  decoded_output = sum([digits[s_sort(translate(output, mapping))] * pow(10, 3-i) for i, output in enumerate(po['output'])])\n",
+        "  # print(decoded_output)\n",
+        "  res += decoded_output\n",
+        "\n",
+        "print(f\"part 2: {res}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VSIcdkV88Z3A",
+        "outputId": "056de374-98f1-484f-f32d-7c9a9934afdc"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "part 1: 539\n",
+            "part 2: 1084606\n"
           ]
         }
       ]
