--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyPFecgBG2f34GVpmZCBF8Id",
+      "authorship_tag": "ABX9TyNzCJZzHcCFsFJczOqvkS38",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -548,7 +548,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zzL9RSGA84Ub",
-        "outputId": "e22a1f3c-45bf-4e1e-db20-a571ebf21d42"
+        "outputId": "2dbfcc7d-eed7-4423-d8e0-595c2f44de9e"
       },
       "source": [
         "positions = [int(s) for s in open('drive/MyDrive/AoC/2021/input07.txt').readline().split(',')]\n",
@@ -561,19 +561,19 @@
         "def consumption2(target, current):\n",
         "  return sum([int(abs(target-curr)*(abs(target-curr)+1)/2) for curr in current])\n",
         "\n",
-        "print(min([(i, consumption1(i, positions)) for i in range(0, len(positions))], key=lambda t: t[1]))\n",
-        "print(min([(i, consumption2(i, positions)) for i in range(0, len(positions))], key=lambda t: t[1]))\n",
+        "print(\"part 1:\", min([(i, consumption1(i, positions)) for i in range(0, len(positions))], key=lambda t: t[1]))\n",
+        "print(\"part 2:\", min([(i, consumption2(i, positions)) for i in range(0, len(positions))], key=lambda t: t[1]))\n",
         "  "
       ],
-      "execution_count": null,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "estimation(part 1): 243.2525\n",
-            "(347, 347449)\n",
-            "(486, 98039527)\n"
+            "part 1: (347, 347449)\n",
+            "part 2: (486, 98039527)\n"
           ]
         }
       ]
@@ -598,10 +598,9 @@
         "\n",
         "print(f\"part 1: {sum([1 if len(o) in [sc[1], sc[4], sc[7], sc[8]] else 0 for po in patterns_and_output for o in po['output']])}\")\n",
         "\n",
-        "# 2 find wiring\n",
+        "# 2 find wiring from patterns, then translate/sort output to find the digits\n",
         "\n",
-        "# output: map letter in input pattern -> segments (a-g)\n",
-        "\n",
+        "# Segment letters for each digit - this is what the output must be translated to!\n",
         "# 1:     c     f\n",
         "# 7: a   c     f    \n",
         "# 4:   b c d   f     \n",
@@ -615,14 +614,20 @@
         "\n",
         "from functools import reduce\n",
         "\n",
+        "# output: map letter in input pattern -> segments (a-g)\n",
         "def decode(patterns) -> dict:\n",
+        "\n",
+        "  # sort patterns by number of segments used for the digit,\n",
+        "  # there are always 1 of length 2 (representing \"1\"), 1/3 (\"7\"), 1/4 (\"4\"), 3/5, 3/6, and 1 of length 7 (\"8\")\n",
         "  sp = sorted(patterns, key=lambda s: len(s))\n",
-        "  len2_1_cf = sp[0]\n",
-        "  len3_7_acf = sp[1]\n",
-        "  len4_4_bcdf = sp[2]\n",
-        "  len5_235 = sp[3:6]\n",
-        "  len6_069 = sp[6:9]\n",
+        "  len2_1_cf = sp[0]  # read: pattern of length 2 = digit \"1\" = segments c and f\n",
+        "  len3_7_acf = sp[1] \n",
+        "  len4_4_bcdf = sp[2]  \n",
+        "  len5_235 = sp[3:6]  # read: list of patterns of length 5 (there are always 3), representing digits \"2\", \"3\", \"5\" (5 segments each)\n",
+        "  len6_069 = sp[6:9]  # dito for length 6\n",
         "  len7_8_abcdefg = sp[9]\n",
+        "\n",
+        "  # some utilities \n",
         "\n",
         "  def s_diff(s1:str, s2:str) -> str:\n",
         "    return \"\".join([c for c in s1 if c not in s2])  \n",
@@ -636,37 +641,39 @@
         "  def chars_in(s1:str, s2:str) -> bool:\n",
         "    return sum([1 if c in s2 else 0 for c in s1]) == len(s1)\n",
         "\n",
-        "\n",
-        "  segments_by_wire = {}\n",
+        "  # one of many possible ways of deducting the mapping of the segment codes used in output to the correct segments\n",
+        "  \n",
+        "  mapping = {}\n",
         "  # 1\n",
         "  seg_a = s_diff(len3_7_acf, len2_1_cf)\n",
-        "  segments_by_wire[seg_a] = 'a'\n",
+        "  mapping[seg_a] = 'a'\n",
         "  # 2 dg = \"3\" / len5 which includes (\"1\") - \"7\"\n",
         "  seg_dg = s_diff([p for p in len5_235 if chars_in(len2_1_cf, p)][0], len3_7_acf)\n",
         "  # 3 \n",
         "  seg_bd = s_diff(len4_4_bcdf, len2_1_cf)\n",
         "  # 4\n",
         "  seg_d = s_inter(seg_dg, seg_bd)\n",
-        "  segments_by_wire[seg_d] = 'd'\n",
+        "  mapping[seg_d] = 'd'\n",
         "  # 5\n",
         "  seg_g = s_diff(seg_dg, seg_d)\n",
-        "  segments_by_wire[seg_g] = 'g'\n",
+        "  mapping[seg_g] = 'g'\n",
         "  # 6\n",
         "  seg_b = s_diff(seg_bd, seg_d)\n",
-        "  segments_by_wire[seg_b] = 'b'\n",
+        "  mapping[seg_b] = 'b'\n",
         "  # 7\n",
         "  seg_eg = s_diff(len7_8_abcdefg, s_union(len3_7_acf, len4_4_bcdf))\n",
         "  # 8\n",
         "  seg_e = s_diff(seg_eg, seg_g)\n",
-        "  segments_by_wire[seg_e] = 'e'\n",
+        "  mapping[seg_e] = 'e'\n",
         "  # 9 f = \"6\" / len 6 which has only one of the segments of \"1\" (cf) - segments a,b,d,e,g\n",
         "  seg_f = reduce(lambda p, seg: sdiff(p, seg), [seg_a, seg_b, seg_d, seg_e, seg_g], [p for p in len6_069 if len(s_inter(p, len2_1_cf)) == 1][0])\n",
-        "  segments_by_wire[seg_f] = 'f'\n",
+        "  mapping[seg_f] = 'f'\n",
         "  # 10 \n",
         "  seg_c = s_diff(len2_1_cf, seg_f)\n",
-        "  segments_by_wire[seg_c] = 'c'\n",
-        "  return segments_by_wire\n",
+        "  mapping[seg_c] = 'c'\n",
+        "  return mapping\n",
         "\n",
+        "# apply mapping to output to get correct segment codes\n",
         "def translate(output, mapping):\n",
         "  return \"\".join([mapping[o] for o in output])\n",
         "\n",
@@ -675,6 +682,7 @@
         "\n",
         "# segments for digits 0-9\n",
         "segments = [ 'abcefg', 'cf', 'acdeg', 'acdfg', 'bcdf', 'abdfg', 'abdefg', 'acf', 'abcdefg', 'abcdfg' ]\n",
+        "# digits by segments, it is important that the segment letters are sorted for each digit!\n",
         "digits = dict((s, d) for d, s in enumerate(segments))\n",
         "\n",
         "res = 0\n",
@@ -691,9 +699,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VSIcdkV88Z3A",
-        "outputId": "056de374-98f1-484f-f32d-7c9a9934afdc"
+        "outputId": "1235aacb-0791-48e9-f200-a09b30807552"
       },
-      "execution_count": 47,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
