--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyNzCJZzHcCFsFJczOqvkS38",
+      "authorship_tag": "ABX9TyNnkOraqUIgFlx1VrwgUQM7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -592,11 +592,16 @@
       "source": [
         "patterns_and_output = [{'patterns': l[0].split(), 'output': l[1].split()} for l in [line.split('|') for line in open('drive/MyDrive/AoC/2021/input08.txt')]]\n",
         "\n",
-        "sc = {0: 6, 1: 2, 2: 5, 3: 5, 4: 4, 5: 5, 6: 6, 7: 3, 8: 7, 9: 6}  # segment counts\n",
+        "# segments for digits 0-9\n",
+        "segments = [ 'abcefg', 'cf', 'acdeg', 'acdfg', 'bcdf', 'abdfg', 'abdefg', 'acf', 'abcdefg', 'abcdfg' ]\n",
         "\n",
         "# 1 unique digits in output\n",
         "\n",
-        "print(f\"part 1: {sum([1 if len(o) in [sc[1], sc[4], sc[7], sc[8]] else 0 for po in patterns_and_output for o in po['output']])}\")\n",
+        "# segment counts by digit\n",
+        "sc = dict((i, len(s)) for i, s in enumerate(segments))\n",
+        "\n",
+        "print(\"part 1:\", sum([1 if len(o) in [sc[1], sc[4], sc[7], sc[8]] else 0 for po in patterns_and_output for o in po['output']]))\n",
+        "\n",
         "\n",
         "# 2 find wiring from patterns, then translate/sort output to find the digits\n",
         "\n",
@@ -677,31 +682,30 @@
         "def translate(output, mapping):\n",
         "  return \"\".join([mapping[o] for o in output])\n",
         "\n",
+        "# sort letters in a string (needed for looking up digits by segments string)\n",
         "def s_sort(s:str) -> str:\n",
         "  return \"\".join(sorted(s))\n",
         "\n",
-        "# segments for digits 0-9\n",
-        "segments = [ 'abcefg', 'cf', 'acdeg', 'acdfg', 'bcdf', 'abdfg', 'abdefg', 'acf', 'abcdefg', 'abcdfg' ]\n",
         "# digits by segments, it is important that the segment letters are sorted for each digit!\n",
         "digits = dict((s, d) for d, s in enumerate(segments))\n",
         "\n",
         "res = 0\n",
         "for po in patterns_and_output:\n",
         "  mapping = decode(po['patterns'])\n",
-        "  decoded_output = sum([digits[s_sort(translate(output, mapping))] * pow(10, 3-i) for i, output in enumerate(po['output'])])\n",
+        "  decoded_output = sum([digits[s_sort(translate(output, mapping))] * pow(10, i) for i, output in enumerate(reversed(po['output']))])\n",
         "  # print(decoded_output)\n",
         "  res += decoded_output\n",
         "\n",
-        "print(f\"part 2: {res}\")"
+        "print(\"part 2:\", res)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "VSIcdkV88Z3A",
-        "outputId": "1235aacb-0791-48e9-f200-a09b30807552"
+        "outputId": "211c2fc7-c5e0-4c51-abf1-2da812dab1c0"
       },
-      "execution_count": 51,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
