--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyNnkOraqUIgFlx1VrwgUQM7",
+      "authorship_tag": "ABX9TyOqbPAuC3ncvoT7rEGdxlpi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -565,7 +565,7 @@
         "print(\"part 2:\", min([(i, consumption2(i, positions)) for i in range(0, len(positions))], key=lambda t: t[1]))\n",
         "  "
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -705,7 +705,7 @@
         "id": "VSIcdkV88Z3A",
         "outputId": "211c2fc7-c5e0-4c51-abf1-2da812dab1c0"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -713,6 +713,95 @@
           "text": [
             "part 1: 539\n",
             "part 2: 1084606\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "9) Height map"
+      ],
+      "metadata": {
+        "id": "CCoj8v8ZM09g"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "heightmap = [[int(c) for c in line.strip()] for line in open('drive/MyDrive/AoC/2021/input09.txt')]\n",
+        "\n",
+        "h = len(heightmap)\n",
+        "w = len(heightmap[0])\n",
+        "\n",
+        "# in the following x, y are coordinates\n",
+        "# p (point), lp (low point), nb (neighbor) are tuples representing points with 2 coordinates\n",
+        "# so we can write x, y = p meaning x = p[0], y = p[1]\n",
+        "# low_points, nbs (neighbors), b (basin) are sets of points (tuples)\n",
+        "\n",
+        "# this should be memoized / cached\n",
+        "def neighbors(p) -> list:\n",
+        "  x, y = p\n",
+        "  return [(xx, yy) for yy in range(y-1, y+2) for xx in range(x-1, x+2) if ((xx == x) ^ (yy == y)) and xx >= 0 and xx < w and yy >=0 and yy < h]\n",
+        "\n",
+        "def height(p) -> int:\n",
+        "  x, y = p\n",
+        "  return heightmap[y][x]\n",
+        "\n",
+        "# 1 - low points \n",
+        "\n",
+        "low_points = [(x, y) for y in range(0, h) for x in range(0, w) if sum([1 for p in neighbors((x, y)) if height(p) > height((x, y))]) == len(neighbors((x, y)))]\n",
+        "# print(\"low points: \", low_points)\n",
+        "\n",
+        "print(\"part 1:\",\n",
+        "  sum([height(p) + 1 for p in low_points]))\n",
+        "\n",
+        "# part 2 - basins, using mutable sets\n",
+        "\n",
+        "def basin(point) -> set:\n",
+        "  def extend(b, p):\n",
+        "    b.add(p)\n",
+        "    for nb in neighbors(p):\n",
+        "      if nb not in b and height(nb) in range(height(p), 9):\n",
+        "        extend(b, nb)\n",
+        "  basin = set()\n",
+        "  extend(basin, point)\n",
+        "  return basin\n",
+        "\n",
+        "basin_sizes = sorted([len(basin(lp)) for lp in low_points], reverse=True)\n",
+        "print(\"part 2 (mutable):\", basin_sizes[0] * basin_sizes[1] * basin_sizes[2])\n",
+        "\n",
+        "# part 2 - basins, using functional adding to sets (return new extended set)\n",
+        "\n",
+        "from functools import reduce\n",
+        "\n",
+        "def set_add(s: set, element) -> set:\n",
+        "  return set([*s, element])  # *s explodes the iterable (set) s to single array elements\n",
+        "\n",
+        "def fbasin(point) -> set:\n",
+        "  def extend(basin, p) -> set:\n",
+        "    return reduce(lambda ext_basin, nb: extend(ext_basin, nb) if nb not in ext_basin and height(nb) in range(height(p), 9) else ext_basin, neighbors(p), set_add(basin, p))\n",
+        "  return extend(set(), point)\n",
+        "\n",
+        "fbasin_sizes = sorted([len(fbasin(lp)) for lp in low_points], reverse=True)\n",
+        "print(\"part 2 (functional):\", fbasin_sizes[0] * fbasin_sizes[1] * fbasin_sizes[2])\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1qN4FtKCM4aD",
+        "outputId": "2d028c30-f111-4c35-ac19-72af3c50542c"
+      },
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "part 1: 456\n",
+            "part 2 (mutable): 1047744\n",
+            "part 2 (functional): 1047744\n"
           ]
         }
       ]
