--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyOqbPAuC3ncvoT7rEGdxlpi",
+      "authorship_tag": "ABX9TyPhzHJbFVkFsGebgRZyhjhN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -671,7 +671,9 @@
         "  seg_e = s_diff(seg_eg, seg_g)\n",
         "  mapping[seg_e] = 'e'\n",
         "  # 9 f = \"6\" / len 6 which has only one of the segments of \"1\" (cf) - segments a,b,d,e,g\n",
-        "  seg_f = reduce(lambda p, seg: sdiff(p, seg), [seg_a, seg_b, seg_d, seg_e, seg_g], [p for p in len6_069 if len(s_inter(p, len2_1_cf)) == 1][0])\n",
+        "  seg_f = reduce(lambda p, seg: sdiff(p, seg), \n",
+        "                 [seg_a, seg_b, seg_d, seg_e, seg_g], \n",
+        "                 [p for p in len6_069 if len(s_inter(p, len2_1_cf)) == 1][0])\n",
         "  mapping[seg_f] = 'f'\n",
         "  # 10 \n",
         "  seg_c = s_diff(len2_1_cf, seg_f)\n",
@@ -742,7 +744,10 @@
         "# this should be memoized / cached\n",
         "def neighbors(p) -> list:\n",
         "  x, y = p\n",
-        "  return [(xx, yy) for yy in range(y-1, y+2) for xx in range(x-1, x+2) if ((xx == x) ^ (yy == y)) and xx >= 0 and xx < w and yy >=0 and yy < h]\n",
+        "  return [(xx, yy) \n",
+        "    for yy in range(y-1, y+2) \n",
+        "      for xx in range(x-1, x+2) \n",
+        "        if ((xx == x) ^ (yy == y)) and xx >= 0 and xx < w and yy >=0 and yy < h]\n",
         "\n",
         "def height(p) -> int:\n",
         "  x, y = p\n",
@@ -750,7 +755,10 @@
         "\n",
         "# 1 - low points \n",
         "\n",
-        "low_points = [(x, y) for y in range(0, h) for x in range(0, w) if sum([1 for p in neighbors((x, y)) if height(p) > height((x, y))]) == len(neighbors((x, y)))]\n",
+        "low_points = [(x, y) \n",
+        "  for y in range(0, h)\n",
+        "    for x in range(0, w) \n",
+        "      if len([p for p in neighbors((x, y)) if height(p) > height((x, y))]) == len(neighbors((x, y)))]\n",
         "# print(\"low points: \", low_points)\n",
         "\n",
         "print(\"part 1:\",\n",
@@ -780,7 +788,9 @@
         "\n",
         "def fbasin(point) -> set:\n",
         "  def extend(basin, p) -> set:\n",
-        "    return reduce(lambda ext_basin, nb: extend(ext_basin, nb) if nb not in ext_basin and height(nb) in range(height(p), 9) else ext_basin, neighbors(p), set_add(basin, p))\n",
+        "    return reduce(lambda ext_basin, nb: extend(ext_basin, nb) if nb not in ext_basin and height(nb) in range(height(p), 9) else ext_basin, \n",
+        "                  neighbors(p), \n",
+        "                  set_add(basin, p))\n",
         "  return extend(set(), point)\n",
         "\n",
         "fbasin_sizes = sorted([len(fbasin(lp)) for lp in low_points], reverse=True)\n",
@@ -791,9 +801,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1qN4FtKCM4aD",
-        "outputId": "2d028c30-f111-4c35-ac19-72af3c50542c"
+        "outputId": "211cbc2c-7ace-4a22-bc45-410e53727a13"
       },
-      "execution_count": 102,
+      "execution_count": 106,
       "outputs": [
         {
           "output_type": "stream",
