--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyPhzHJbFVkFsGebgRZyhjhN",
+      "authorship_tag": "ABX9TyNiH3hf9SKkcuGK1ojhwLTG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -739,15 +739,15 @@
         "# in the following x, y are coordinates\n",
         "# p (point), lp (low point), nb (neighbor) are tuples representing points with 2 coordinates\n",
         "# so we can write x, y = p meaning x = p[0], y = p[1]\n",
-        "# low_points, nbs (neighbors), b (basin) are sets of points (tuples)\n",
+        "# low_points, nbs (neighbors), b (basin) are sets of tuples (points)\n",
         "\n",
         "# this should be memoized / cached\n",
         "def neighbors(p) -> list:\n",
         "  x, y = p\n",
         "  return [(xx, yy) \n",
-        "    for yy in range(y-1, y+2) \n",
-        "      for xx in range(x-1, x+2) \n",
-        "        if ((xx == x) ^ (yy == y)) and xx >= 0 and xx < w and yy >=0 and yy < h]\n",
+        "          for yy in range(y-1, y+2) \n",
+        "            for xx in range(x-1, x+2) \n",
+        "              if ((xx == x) ^ (yy == y)) and xx in range(0, w) and yy in range(0, h)]\n",
         "\n",
         "def height(p) -> int:\n",
         "  x, y = p\n",
@@ -755,11 +755,11 @@
         "\n",
         "# 1 - low points \n",
         "\n",
-        "low_points = [(x, y) \n",
+        "low_points = [\n",
+        "  (x, y) \n",
         "  for y in range(0, h)\n",
         "    for x in range(0, w) \n",
         "      if len([p for p in neighbors((x, y)) if height(p) > height((x, y))]) == len(neighbors((x, y)))]\n",
-        "# print(\"low points: \", low_points)\n",
         "\n",
         "print(\"part 1:\",\n",
         "  sum([height(p) + 1 for p in low_points]))\n",
@@ -767,13 +767,13 @@
         "# part 2 - basins, using mutable sets\n",
         "\n",
         "def basin(point) -> set:\n",
-        "  def extend(b, p):\n",
-        "    b.add(p)\n",
+        "  def extend_by(p):\n",
+        "    basin.add(p)\n",
         "    for nb in neighbors(p):\n",
-        "      if nb not in b and height(nb) in range(height(p), 9):\n",
-        "        extend(b, nb)\n",
+        "      if nb not in basin and height(nb) in range(height(p), 9):\n",
+        "        extend_by(nb)\n",
         "  basin = set()\n",
-        "  extend(basin, point)\n",
+        "  extend_by(point)\n",
         "  return basin\n",
         "\n",
         "basin_sizes = sorted([len(basin(lp)) for lp in low_points], reverse=True)\n",
@@ -783,14 +783,11 @@
         "\n",
         "from functools import reduce\n",
         "\n",
-        "def set_add(s: set, element) -> set:\n",
-        "  return set([*s, element])  # *s explodes the iterable (set) s to single array elements\n",
-        "\n",
         "def fbasin(point) -> set:\n",
         "  def extend(basin, p) -> set:\n",
         "    return reduce(lambda ext_basin, nb: extend(ext_basin, nb) if nb not in ext_basin and height(nb) in range(height(p), 9) else ext_basin, \n",
-        "                  neighbors(p), \n",
-        "                  set_add(basin, p))\n",
+        "                  neighbors(p),      # iterable 'looped' over\n",
+        "                  set([*basin, p]))  # initial value, creates a new set (ext_basin), * explodes/unpacks the current basin\n",
         "  return extend(set(), point)\n",
         "\n",
         "fbasin_sizes = sorted([len(fbasin(lp)) for lp in low_points], reverse=True)\n",
@@ -801,9 +798,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1qN4FtKCM4aD",
-        "outputId": "211cbc2c-7ace-4a22-bc45-410e53727a13"
+        "outputId": "db4b9d17-a955-4ce6-969f-385b832d9706"
       },
-      "execution_count": 106,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "stream",
