--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyNiH3hf9SKkcuGK1ojhwLTG",
+      "authorship_tag": "ABX9TyMF+R692KBO+JbUDx5drhl+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -800,7 +800,7 @@
         "id": "1qN4FtKCM4aD",
         "outputId": "db4b9d17-a955-4ce6-969f-385b832d9706"
       },
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -809,6 +809,89 @@
             "part 1: 456\n",
             "part 2 (mutable): 1047744\n",
             "part 2 (functional): 1047744\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "10) Chunks surrounded by `(), [], {}, <>`\n"
+      ],
+      "metadata": {
+        "id": "4rYx6344oOFv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lines = [l.strip() for l in open('drive/MyDrive/AoC/2021/input10.txt')]\n",
+        "opening = '([{<'\n",
+        "closing = ')]}>'\n",
+        "opened_by = dict([(c, opening[i]) for i, c in enumerate(closing)])\n",
+        "illegal_scores = {\n",
+        "    ')': 3,\n",
+        "    ']': 57,\n",
+        "    '}': 1197,\n",
+        "    '>': 25137\n",
+        "}\n",
+        "# 1 - corrupted lines, find first illegal char, score the line accordingly, sum up all line scores\n",
+        "\n",
+        "def find_illegal_char(line):\n",
+        "  stack = []\n",
+        "  for ch in line:\n",
+        "    if (ch in opening):\n",
+        "      stack.append(ch)\n",
+        "    else:  # assume closed\n",
+        "      if not stack:\n",
+        "        return ch\n",
+        "      opened = stack.pop()\n",
+        "      if opened != opened_by[ch]:\n",
+        "        return ch\n",
+        "  return None\n",
+        "\n",
+        "print(\"part 1:\", sum([illegal_scores[il] if il is not None else 0 for il in [find_illegal_char(line) for line in lines]]))\n",
+        "\n",
+        "# 2 - discard corrupted lines, complete the remaining lines and score each line for completion chars\n",
+        "\n",
+        "closed_by = dict([(o, closing[i]) for i, o in enumerate(opening)])\n",
+        "completion_scores = dict([(c, i+1) for i, c in enumerate(closing)])\n",
+        "\n",
+        "from functools import reduce\n",
+        "\n",
+        "def score_completion(line):\n",
+        "  stack = []\n",
+        "  for ch in line:\n",
+        "    if (ch in opening):\n",
+        "      stack.append(ch)\n",
+        "    else:  # assume closed\n",
+        "      if not stack:\n",
+        "        return 0  # illegal\n",
+        "      opened = stack.pop()\n",
+        "      if opened != opened_by[ch]:\n",
+        "        return 0  # illegal\n",
+        "  return reduce(lambda score, o: 5 * score + completion_scores[closed_by[o]], list(reversed(stack)), 0)\n",
+        "\n",
+        "scores = [score_completion(line) for line in lines]\n",
+        "filtered_scores = [s for s in scores if s > 0]\n",
+        "\n",
+        "print(\"part 2:\", sorted(filtered_scores)[int(len(filtered_scores)/2)])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B1XxUnf7rujv",
+        "outputId": "a49d1b31-83bf-4155-bc1d-4d94c7eb2798"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "part 1: 290691\n",
+            "part 2: 2768166558\n"
           ]
         }
       ]
