--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -1080,28 +1080,34 @@
       "cell_type": "code",
       "source": [
         "import re\n",
-        "# node -> direct neighbors\n",
-        "graph = {}\n",
-        "edgedefs = [re.fullmatch('([a-zA-Z]+)-([a-zA-Z]+)', line.strip()).groups() for line in open('drive/MyDrive/AoC/2021/input12.txt')]\n",
-        "for n1, n2 in edgedefs:\n",
-        "  graph[n1] = graph.get(n1, []) + [n2]\n",
-        "  graph[n2] = graph.get(n2, []) + [n1]\n",
         "\n",
-        "def walk1(node, path:list):\n",
-        "  p = path + [node]\n",
-        "  if node == 'end':\n",
-        "    # print(p)\n",
-        "    return 1\n",
-        "  return sum([walk1(n, p) for n in graph[node] if n[0].isupper() or n not in path])\n",
+        "def merge(dict1, dict2):\n",
+        "  return {**dict1, **dict2}\n",
+        "\n",
+        "# node -> adjacent nodes (caves)\n",
+        "graph = {}\n",
+        "for n1, n2 in [re.fullmatch('([a-zA-Z]+)-([a-zA-Z]+)', line.strip()).groups() for line in open('drive/MyDrive/AoC/2021/input12.txt')]:\n",
+        "  graph = merge(graph, {\n",
+        "      n1: graph.get(n1, []) + [n2], \n",
+        "      n2: graph.get(n2, []) + [n1]})\n",
+        "\n",
+        "def is_small(node):\n",
+        "  return node[0].islower()\n",
+        "\n",
+        "def is_large(node):\n",
+        "  return node[0].isupper()\n",
+        "\n",
+        "def walk1(node, path):\n",
+        "  # if node == 'end': print(path+[node])\n",
+        "  return 1 if node=='end' else sum([walk1(n, path+[node]) for n in graph[node] if is_large(n) or n not in path])\n",
         "\n",
         "print('part 1:', walk1('start', []))\n",
         "\n",
-        "def walk2(node, small_twice, path:list):\n",
-        "  p = path + [node]\n",
-        "  if node == 'end':\n",
-        "    # print(p)\n",
-        "    return 1\n",
-        "  return sum([walk2(n, n if n[0].islower() and n in path else small_twice, p) for n in graph[node] if n[0].isupper() or n not in path or (small_twice is None and n != 'start')])\n",
+        "def walk2(node, small_twice, path):\n",
+        "  # if node == 'end': print(path+[node])\n",
+        "  return 1 if node=='end' else sum([walk2(n, n if is_small(n) and n in path else small_twice, path+[node]) \\\n",
+        "              for n in graph[node] \\\n",
+        "              if is_large(n) or n not in path or (small_twice is None and n != 'start')])\n",
         "\n",
         "print('part 2:', walk2('start', None, []))"
       ],
@@ -1110,9 +1116,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sALg6TtIw8l0",
-        "outputId": "0d641312-f827-4401-8b0a-9a319de61ffc"
+        "outputId": "6a59bd5a-fad2-4dcb-eb8c-2dae7c005d20"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1131,7 +1137,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyNaBu45OvaOyZAKvoCIpGHj",
+      "authorship_tag": "ABX9TyNGun8ynNmZCB82O6NmdPmK",
       "include_colab_link": true
     },
     "kernelspec": {
